<resources>
    <string name="app_name">Seizure Monitoring System Epilepsy</string>
    <string name="welcome_note">Welcome to Seizure Monitoring System</string>
    <string name="create_acc">Create Account</string>
    <string name="mrd">MRD / Patient ID</string>
    <string name="password">Password</string>
    <string name="dob">Date of Birth  dd/mm/yy</string>
    <string name="already_acc"><u>Already have an account, Sign In</u></string>
    <string name="powered">Powered By, Amrita Center for Epilepsy and Sleep Medicines</string>
    <string name="no_already_acc"><u>Don\'t have an account? Sign Up </u></string>
    <string name="login">Login</string>
    <string name="forgotPassword"><u>Forgot Password</u></string>
    <string name="dashboard">Dashboard</string>
    <string name="add">Add</string>
    <string name="medication">Medication</string>
    <string name="metrics">Seizure metrics</string>
    <string name="title_activity_seizure_dashboard">Seizure Monitoring System Epilepsy</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="logout">Logout</string>
    <string name="view_medicine_log">View medicine change log</string>
    <string name="add_patient_image">Add patient image</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="seizure_occurance">Seizure Occurrence</string>
    <string name="timedate">Time &amp; Date</string>
    <string name="seizureduration">Seizure Duration (mins)</string>
    <string name="typeofseizure">Type of Seizure</string>
    <string name="notefordoctor">Note for Doctor</string>
    <string name="medicine">Medicine</string>
</resources>